[project]
name = "MaaDebugger"
version = "v1.18.1"
description = "MaaDebugger"
authors = [{ name = "MaaXYZ" }]
dependencies = [
    "MaaFw>=5.7.0b3",
    "nicegui>=2.21,<3.0",
    "asyncify",
    "pillow",
    "packaging",
]
readme = "README.md"
urls = { Homepage = "https://github.com/MaaXYZ/MaaDebugger" }
requires-python = ">=3.9,<3.14"
scripts = { MaaDebugger = "MaaDebugger.__main__:main" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/MaaDebugger"]

[tool.uv]
upgrade = false
